--- a/index.html
+++ b/index.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="view-port" content="width=device-width, initial-scale=1.0">
-        <title>Coursera-Peer-graded-Assignment-Module-2-Coding-Assignment</title>
-        <link rel="stylesheet" href="Css/style.css">
-        <style>
-        </style>
-    </head>
-    <body>
-        <h1>Our Menu</h1>
-        <section class="col-lg-4 col-md-6 col-sm-12">
-            <div  class="container">
-                <div class="h31">Chicken</div>
-                <p>Our savory chicken dish starts with juicy, tender chicken breast cooked perfection with a blend of aromatic herbs and spices. Served with a side of fluffy rice and sautéed vegetables, this meal is a healthy choice for any occasion. Whether you're looking for a quick weeknight dinner or a satisfying lunch, our chicken dish is sure to satisfy your taste buds & leave you feeling satisfied.
-                </p>
-            </div>
-        </section>
-        <section class="col-lg-4 col-md-6 col-sm-12">
-            <div class="container">
-                <div class="h32">Beef</div>
-                <p>Our savory Beef dishes starts with juicy & tender beef breast cooked to perfection with a blend of aromatic herbs and spices. Served with a side of fluffy rice and sautéed vegetables, this meal is a healthy choice for any occasion. Whether you're looking for a quick weeknight dinner or a satisfying lunch, our chicken dish is sure to satisfy your taste buds & leave you feeling satisfied.
+<head>
+    <meta charset="UTF-8">
+    <meta name="view-port" content="width=device-width, initial-scale=1.0">
+    <title>Coursera-Peer-graded-Assignment-Module-2-Coding-Assignment</title>
+    <link rel="stylesheet" href="Css/style.css">
+    <style>
+    </style>
+</head>
+<body>
+    <h1>Our Menu</h1>
+    <section class="col-lg-4 col-md-6 col-sm-12">
+        <div class="container">
+            <div class="h31">Chicken</div>
+            <p>Our savory chicken dish starts with juicy, tender chicken breast cooked perfection with a blend of
+                aromatic herbs and spices. Served with a side of fluffy rice and sautéed vegetables, this meal is a
+                healthy choice for any occasion. Whether you're looking for a quick weeknight dinner or a satisfying
+                lunch, our chicken dish is sure to satisfy your taste buds & leave you feeling satisfied.
+            </p>
+        </div>
+    </section>
+    <section class="col-lg-4 col-md-6 col-sm-12">
+        <div class="container">
+            <div class="h32">Beef</div>
+            <p>Our savory Beef dishes starts with juicy & tender beef breast cooked to perfection with a blend of
+                aromatic herbs and spices. Served with a side of fluffy rice and sautéed vegetables, this meal is a
+                healthy choice for any occasion. Whether you're looking for a quick weeknight dinner or a satisfying
+                lunch, our chicken dish is sure to satisfy your taste buds & leave you feeling satisfied.
 
-                </p>
-            </div>
-        </section>
-        <section class="col-lg-4 col-md-12 col-sm-12">
-            <div class="container">
-                <div class="h33">Sushi</div>
-                <p>Our savory sushi dish starts with juicy & tender sushi breast cooked to perfection with a blend of aromatic herbs and spices. Served with a side of fluffy rice and sautéed vegetables, this meal is a healthy choice for any occasion. Whether you're looking for a quick weeknight dinner or a satisfying lunch, our chicken dish is sure to satisfy your taste buds & leave you feeling satisfied.
-                </p>
-            </div>
-        </section>
-    </body>
+            </p>
+        </div>
+    </section>
+    <section class="col-lg-4 col-md-12 col-sm-12">
+        <div class="container">
+            <div class="h33">Sushi</div>
+            <p>Our savory sushi dish starts with juicy & tender sushi breast cooked to perfection with a blend of
+                aromatic herbs and spices. Served with a side of fluffy rice and sautéed vegetables, this meal is a
+                healthy choice for any occasion. Whether you're looking for a quick weeknight dinner or a satisfying
+                lunch, our chicken dish is sure to satisfy your taste buds & leave you feeling satisfied.
+            </p>
+        </div>
+    </section>
+</body>
 </html>
